<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSettingDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:drawableStart="@drawable/ic_settings_white"
        android:drawablePadding="@dimen/main_padding_mini"
        android:padding="@dimen/main_padding"
        android:text="@string/action_settings"
        android:textColor="@color/White"
        android:textSize="@dimen/main_app_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTextModeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin_big"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:text="@string/action_text_mode"
        android:textSize="@dimen/main_app_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/rgModeBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettingDescription" />

    <RadioGroup
        android:id="@+id/rgModeBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextModeDescription">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbWhiteMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_margin_mini"
            android:button="@drawable/white_state"
            android:paddingLeft="@dimen/main_margin_mini"
            android:paddingRight="@dimen/main_margin_mini"
            android:text="@string/text_normal_mode"
            android:textSize="@dimen/main_app_text_size" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbSepiaMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_margin_mini"
            android:button="@drawable/sepia_state"
            android:paddingLeft="@dimen/main_padding_mini"
            android:paddingRight="@dimen/main_padding_mini"
            android:text="@string/text_sepia_mode"
            android:textSize="@dimen/main_app_text_size" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbNightMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/night_state"
            android:paddingLeft="@dimen/main_padding_mini"
            android:paddingRight="@dimen/main_padding_mini"
            android:text="@string/text_night_mode"
            android:textSize="@dimen/main_app_text_size" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTextSizeAyahsDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:text="@string/action_text_size_ayahs"
        android:textSize="@dimen/main_app_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgModeBackground" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/sbTextSizeAyahs"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:max="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextSizeAyahsDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTextSizeTranslationsDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:text="@string/action_text_size_translations"
        android:textSize="@dimen/main_app_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbTextSizeAyahs" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/sbTextSizeTranslations"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:max="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextSizeTranslationsDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:text="@string/action_showing_translations"
        android:textSize="@dimen/main_app_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbTextSizeTranslations" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swAyahTranslation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_marginBottom="@dimen/main_margin_big"
        android:switchPadding="@dimen/main_padding_mini"
        android:text="@string/action_ayah_translation"
        android:textSize="@dimen/main_app_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>